--- a/index.html
+++ b/index.html
@@ -5,10 +5,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Select Your Favorite Players</title>
 </head>
 
 <body>
+    <header>
+        <section class="bg-black flex">
+            <div class="pt-32">
+                <img src="images/header.png" alt="">
+            </div>
+
+            <div id="custom-style" class="text-white text-justify pt-52 pl-40">
+                <h1 class="text-5xl text-center text-amber-600">Select Your Favourite Players</h1>
+                <img class="relative left-3/4" src="images/header-line.png" alt="">
+                <p class="text-center pt-6">Indulge yourself in an exciting game by purchasing your favourite players
+                </p>
+            </div>
+        </section>
+
+    </header>
+    <main>
+        <section class="bg-slate-800 pt-20 flex">
+
+            <div class="grid grid-cols-3 gap-4 ml-12 mx-auto w-8/12  ">
+                <div class="border ">
+                    <img class="w-full" src="images/player-1.png" alt="">
+
+                    <h1 class="text-white text-2xl text-center mt-6">Vítor Machado</h1>
+                    <button
+                        class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+
+
+                </div>
+                <div class="border ">
+                    <img class="w-full" src="images/player-2.png" alt="">
+                    <div class="flex-col content-center">
+                        <h1 class="text-white text-2xl text-center mt-6">Neymar Jr</h1>
+                        <button
+                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                    </div>
+
+                </div>
+                <div class="border ">
+                    <img class="w-full" src="images/player-3.png" alt="">
+                    <div class="flex-col content-center">
+                        <h1 class="text-white text-2xl text-center mt-6">Sergio Ramos</h1>
+                        <button
+                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                    </div>
+
+                </div>
+                <div class="border ">
+                    <img class="w-full" src="images/player-4.png" alt="">
+                    <div class="flex-col content-center">
+                        <h1 class="text-white text-2xl text-center mt-6">Renato Sanches</h1>
+                        <button
+                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                    </div>
+
+                </div>
+                <div class="border ">
+                    <img class="w-full" src="images/player-5.png" alt="">
+                    <div class="flex-col content-center">
+                        <h1 class="text-white text-2xl text-center mt-6">Lionel Messi</h1>
+                        <button
+                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                    </div>
+
+                </div>
+                <div class="border ">
+                    <img class="w-full" src="images/player-6.png" alt="">
+                    <div class="flex-col content-center">
+                        <h1 class="text-white text-2xl text-center mt-6">Kylian Mbappé</h1>
+                        <button
+                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="grid grid-rows-2  text-white mx-auto gap-4 w-1/5 ">
+                <div class="bg-black">
+                    <h1 class="text-3xl text-center mt-6">Selected - V</h1>
+                    <img class="pl-16" src="images/marker.png" alt="">
+                    <!-- <ol id="player-list">
+
+                    </ol> -->
+                </div>
+                <div class="bg-black">
+                    <h1 class="text-3xl text-center mt-6">Budget</h1>
+                    <img class="pl-16" src="images/marker.png" alt="">
+
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
     <script src="js/budget.js"></script>
     <script src="js/selection.js"></script>
 </body>
