--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <div class="border ">
                     <img class="w-full" src="images/player-1.png" alt="">
 
-                    <h1 class="text-white text-2xl text-center mt-6">Vítor Machado</h1>
-                    <button
+                    <h1 id="player-1" class="text-white text-2xl text-center mt-6">Vítor Machado</h1>
+                    <button id="btn-selection"
                         class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
 
 
@@ -90,9 +90,9 @@
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Selected - V</h1>
                     <img class="pl-16" src="images/marker.png" alt="">
-                    <!-- <ol id="player-list">
+                    <ol id="player-list">
 
-                    </ol> -->
+                    </ol>
                 </div>
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Budget</h1>
