--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Selected - V</h1>
                     <img class="pl-16" src="images/marker.png" alt="">
-                    <ol id="player-list">
+                    <ul id="player-list" class="pl-20 pt-8">
 
-                    </ol>
+
+                    </ul>
                 </div>
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Budget</h1>
