--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
                     <h1 id="player-1" class="text-white text-2xl text-center mt-6">Vítor Machado</h1>
                     <button id="btn-selection"
-                        class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                        class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
 
 
                 </div>
                 <div class="border ">
                     <img class="w-full" src="images/player-2.png" alt="">
                     <div class="flex-col content-center">
-                        <h1 class="text-white text-2xl text-center mt-6">Neymar Jr</h1>
-                        <button
-                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                        <h1 id="player-2" class="text-white text-2xl text-center mt-6">Neymar Jr</h1>
+                        <button id="btn-selection2"
+                            class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
                 </div>
@@ -53,7 +53,7 @@
                     <div class="flex-col content-center">
                         <h1 class="text-white text-2xl text-center mt-6">Sergio Ramos</h1>
                         <button
-                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                            class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
                 </div>
@@ -62,7 +62,7 @@
                     <div class="flex-col content-center">
                         <h1 class="text-white text-2xl text-center mt-6">Renato Sanches</h1>
                         <button
-                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                            class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
                 </div>
@@ -71,7 +71,7 @@
                     <div class="flex-col content-center">
                         <h1 class="text-white text-2xl text-center mt-6">Lionel Messi</h1>
                         <button
-                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                            class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
                 </div>
@@ -80,7 +80,7 @@
                     <div class="flex-col content-center">
                         <h1 class="text-white text-2xl text-center mt-6">Kylian Mbappé</h1>
                         <button
-                            class="hover:bg-amber-700 bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
+                            class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
                 </div>
@@ -90,10 +90,20 @@
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Selected - V</h1>
                     <img class="pl-16" src="images/marker.png" alt="">
-                    <ul id="player-list" class="pl-20 pt-8">
+                    <div class="flex">
+                        <ol class="pl-20 pt-8">
+                            <li>1.</li>
+                            <li>2.</li>
+                            <li>3.</li>
+                            <li>4.</li>
+                            <li>5.</li>
+
+                        </ol>
+                        <ul id="player-list" class=" pt-8">
 
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Budget</h1>
