--- a/index.html
+++ b/index.html
@@ -108,7 +108,26 @@
                 <div class="bg-black">
                     <h1 class="text-3xl text-center mt-6">Budget</h1>
                     <img class="pl-16" src="images/marker.png" alt="">
-
+                    <div class="flex mt-6 mr-4">
+                        <h1 class="text-white ml-6 mr-6">Per Player</h1>
+                        <input class="w-6/12" type="text" id="per-budget">
+                    </div>
+                    <button
+                        class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate</button>
+                    <div class="flex">
+                        <h1 class="ml-6 mr-6">Player-Expense</h1>
+                        <h2>$<span id="total-amount">00</span></h2>
+                    </div>
+                    <div class="flex mt-6 mr-4">
+                        <h1 class="text-white ml-6 mr-6">Manager</h1>
+                        <input class="w-6/12" type="text" id="per-budget">
+                    </div>
+                    <div class="flex mt-6 mr-4">
+                        <h1 class="text-white ml-6 mr-11">Coach</h1>
+                        <input class="w-6/12" type="text" id="per-budget">
+                    </div>
+                    <button class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate
+                        Total</button>
                 </div>
             </div>
         </section>
