--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                     <img class="pl-16" src="images/marker.png" alt="">
                     <div class="flex mt-6 mr-4">
                         <h1 class="text-white ml-6 mr-6">Per Player</h1>
-                        <input class="w-6/12" type="text" id="per-budget">
+                        <input class="w-6/12 text-black" type="text" id="per-budget">
                     </div>
-                    <button
+                    <button id="player-calculate"
                         class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate</button>
                     <div class="flex">
                         <h1 class="ml-6 mr-6">Player-Expense</h1>
@@ -120,14 +120,19 @@
                     </div>
                     <div class="flex mt-6 mr-4">
                         <h1 class="text-white ml-6 mr-6">Manager</h1>
-                        <input class="w-6/12" type="text" id="per-budget">
+                        <input id="manager-calculate" class="w-6/12 text-black" type="text" id="per-budget">
                     </div>
                     <div class="flex mt-6 mr-4">
                         <h1 class="text-white ml-6 mr-11">Coach</h1>
-                        <input class="w-6/12" type="text" id="per-budget">
+                        <input id="coach-calculate" class="w-6/12 text-black" type="text" id="per-budget">
                     </div>
-                    <button class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate
+                    <button id="calculate-total"
+                        class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate
                         Total</button>
+                    <div class="flex">
+                        <h1 class="ml-6 mr-6">Total</h1>
+                        <h2>$<span id="total-expense">00</span></h2>
+                    </div>
                 </div>
             </div>
         </section>
