--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <div class="border ">
                     <img class="w-full" src="images/player-3.png" alt="">
                     <div class="flex-col content-center">
-                        <h1 class="text-white text-2xl text-center mt-6">Sergio Ramos</h1>
-                        <button
+                        <h1 id="player-3" class=" text-white text-2xl text-center mt-6">Sergio Ramos</h1>
+                        <button id="btn-selection3"
                             class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
@@ -60,8 +60,8 @@
                 <div class="border ">
                     <img class="w-full" src="images/player-4.png" alt="">
                     <div class="flex-col content-center">
-                        <h1 class="text-white text-2xl text-center mt-6">Renato Sanches</h1>
-                        <button
+                        <h1 id="player-4" class="text-white text-2xl text-center mt-6">Renato Sanches</h1>
+                        <button id="btn-selection4"
                             class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
@@ -69,8 +69,8 @@
                 <div class="border ">
                     <img class="w-full" src="images/player-5.png" alt="">
                     <div class="flex-col content-center">
-                        <h1 class="text-white text-2xl text-center mt-6">Lionel Messi</h1>
-                        <button
+                        <h1 id="player-5" class="text-white text-2xl text-center mt-6">Lionel Messi</h1>
+                        <button id="btn-selection5"
                             class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
@@ -78,8 +78,8 @@
                 <div class="border ">
                     <img class="w-full" src="images/player-6.png" alt="">
                     <div class="flex-col content-center">
-                        <h1 class="text-white text-2xl text-center mt-6">Kylian Mbappé</h1>
-                        <button
+                        <h1 id="player-6" class="text-white text-2xl text-center mt-6">Kylian Mbappé</h1>
+                        <button id="btn-selection6"
                             class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Select</button>
                     </div>
 
@@ -99,7 +99,7 @@
                             <li>5.</li>
 
                         </ol>
-                        <ul id="player-list" class=" pt-8">
+                        <ul id="player-list" class="pt-8">
 
 
                         </ul>
