--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <button id="calculate-total"
                         class="bg-sky-600 px-8 py-2 text-white font-medium w-10/12 mt-6 mb-6 ml-6">Calculate
                         Total</button>
-                    <div class="flex">
+                    <div class="flex mb-6">
                         <h1 class="ml-6 mr-6">Total</h1>
                         <h2>$<span id="total-expense">00</span></h2>
                     </div>
@@ -138,8 +138,9 @@
         </section>
 
     </main>
-    <footer>
-
+    <footer class="bg-black  pt-32 h-40">
+        <hr>
+        <h1 class="text-white text-center">Copyright @ 2022 All Rights Reserved</h1>
     </footer>
     <script src="js/budget.js"></script>
     <script src="js/selection.js"></script>
